--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,13 @@
         "module": "commonjs",
         "target": "es6",
         "noImplicitAny": false,
-        "sourceMap": false
+        "sourceMap": true
     },
+    "include": [
+      "src/**/*"
+    ],
     "exclude": [
-        "node_modules"
+        "node_modules",
+        "gulpfile.ts"
     ]
 }
