--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   },
   "homepage": "https://github.com/xanite/xpm#readme",
   "dependencies": {
+    "osenv": "^0.1.3",
     "pnpm": "^0.35.0",
     "typescript": "^1.8.10",
-    "typings": "^1.3.3"
+    "typings": "^1.3.3",
+    "user-home": "^2.0.0",
+    "xdg-basedir": "^2.0.0"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
