--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
   },
   "homepage": "https://github.com/xanite/xpm#readme",
   "dependencies": {
+    "blessed": "^0.1.81",
+    "log-cb": "^0.2.1",
+    "minimist": "^1.2.0",
     "osenv": "^0.1.3",
     "pnpm": "^0.36.0",
     "typescript": "^2.0.3",
     "typings": "^1.4.0",
+    "underscore": "^1.8.3",
     "user-home": "^2.0.0",
     "xdg-basedir": "^2.0.0"
   },
