--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,10 +7,7 @@
         "sourceMap": true
     },
     "include": [
-      "src/**/*"
-    ],
-    "exclude": [
-        "node_modules",
-        "gulpfile.ts"
+      "src/**/*",
+      "typings/**/*"
     ]
 }
