--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "blessed": "^0.1.81",
     "log-cb": "^0.2.1",
     "minimist": "^1.2.0",
-    "osenv": "^0.1.3",
     "pnpm": "^0.37.0",
     "typescript": "^2.0.3",
     "typings": "^1.4.0",
@@ -28,6 +27,7 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-typescript": "^3.0.1",
+    "ts-node": "^1.3.0",
     "tslint": "^3.15.1"
   }
 }
