--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,12 @@
         "module": "commonjs",
         "target": "es6",
         "outDir": "lib",
+        "baseUrl": "src",
         "noImplicitAny": false,
         "sourceMap": true
     },
-    "include": [
-      "src/**/*",
-      "typings/**/*"
+    "exclude": [
+      "node_modules",
+      "gulpfile.ts"
     ]
 }
