--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
         "outDir": "lib",
         "baseUrl": "src",
         "noImplicitAny": false,
-        "sourceMap": true
+        "sourceMap": false
     },
     "exclude": [
       "node_modules",
