--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp": "^3.9.1",
     "gulp-typescript": "^3.0.1",
     "ts-node": "^1.3.0",
-    "tslint": "^3.15.1"
+    "tslint": "^3.15.1",
+    "tslint-config-xo": "^0.1.0"
   }
 }
