--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,11 @@ language: node_js
 node_js:
   - '6'
 before_install:
-  - npm i -g npm
-  - npm i -g gulp
-script: gulp compile:typescript
-after_success: npm run converalls
+  - npm uninstall typescript
+  - npm uninstall tslint
+  - npm uninstall typings
+  - npm install -g npm
+  - npm install -g typings
+  - typings install
+script: npm run compile
+# after_success: npm run converalls
