--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "type": "git",
     "url": "git+https://github.com/xanite/xpm.git"
   },
+	"scripts": {
+		"compile": "gulp compile:typescript"
+	},
   "author": "Connor Hartley <vectrixu+gh@gmail.com",
   "license": "GPL-3.0",
   "private": true,
@@ -25,6 +28,7 @@
     "xdg-basedir": "^2.0.0"
   },
   "devDependencies": {
+    "coveralls": "^2.11.14",
     "gulp": "^3.9.1",
     "gulp-typescript": "^3.0.2",
     "ts-node": "^1.3.0",
