--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,10 @@
 language: node_js
 node_js:
   - '6'
-before_install:
-  - npm uninstall typescript
-  - npm uninstall tslint
-  - npm uninstall typings
+install:
   - npm install -g npm
   - npm install -g typings
   - typings install
+  - npm install
 script: npm run compile
 # after_success: npm run converalls
