--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "type": "git",
     "url": "git+https://github.com/xanite/xpm.git"
   },
-	"scripts": {
-		"compile": "gulp compile:typescript"
-	},
+  "scripts": {
+    "compile": "gulp compile:typescript"
+  },
   "author": "Connor Hartley <vectrixu+gh@gmail.com",
   "license": "GPL-3.0",
   "private": true,
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/xanite/xpm#readme",
   "dependencies": {
     "blessed": "^0.1.81",
+    "git-utils": "^4.1.2",
     "log-cb": "^0.2.1",
     "minimist": "^1.2.0",
     "pnpm": "^0.37.0",
