--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,16 @@
 language: node_js
+notifications:
+  email:
+    on_success: never
+    on_failure: change
 node_js:
   - '6'
+addons:
+  apt:
+    packages:
+      - g++4.8
+env:
+  - CXX=g++4.8
 install:
   - npm install -g npm
   - npm install -g node-gyp
