--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,12 @@ node_js:
 addons:
   apt:
     packages:
-      - g++4.8
+      - libgnome-keyring-dev
+      - g++-4.8
+    sources:
+      - ubuntu-toolchain-r-test
 env:
-  - CXX=g++4.8
+  - CXX=g++-4.8
 install:
   - npm install -g npm
   - npm install -g node-gyp
