--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "git-utils": "^4.1.2",
     "log-cb": "^0.2.1",
     "minimist": "^1.2.0",
+    "nodegit": "^0.16.0",
     "typescript": "^2.0.3",
     "typings": "^1.4.0",
     "underscore": "^1.8.3",
@@ -31,8 +32,9 @@
     "coveralls": "^2.11.14",
     "gulp": "^3.9.1",
     "gulp-typescript": "^3.0.2",
-    "ts-node": "^1.3.0",
+    "ts-node": "^1.4.1",
     "tslint": "^3.15.1",
-    "tslint-config-xo": "^0.1.0"
+    "tslint-config-xo": "^0.2.0",
+    "typescript": "^2.0.3"
   }
 }
