--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "git-utils": "^4.1.2",
     "log-cb": "^0.2.1",
     "minimist": "^1.2.0",
+    "mv": "^2.1.1",
     "nodegit": "^0.16.0",
+    "tmp": "^0.0.29",
     "typescript": "^2.0.3",
     "typings": "^1.4.0",
     "underscore": "^1.8.3",
